--- a/index.html
+++ b/index.html
@@ -29,16 +29,22 @@
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#attribute_closures" role="tab" aria-controls="nav-home" aria-selected="true">Attribute Closure</a>
-                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Functional Dependency Closure</a>
-                            <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Minimal Cover</a>
+                            <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#fd_closure" role="tab" aria-controls="nav-profile" aria-selected="false">Functional Dependency Closure</a>
+                            <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#min_cover" role="tab" aria-controls="nav-contact" aria-selected="false">Minimal Cover</a>
                             <a class="nav-item nav-link" id="nav-nfs-tab" data-toggle="tab" href="#nav-nfs" role="tab" aria-controls="nav-nfs" aria-selected="false">Normal Forms</a>
                         </div>
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="attribute_closures" role="tabpanel" aria-labelledby="nav-home-tab">...</div>
-                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-                        <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
-                        <div class="tab-pane fade" id="nav-nfs" role="tabpanel" aria-labelledby="nav-nfs-tab">...</div>
+                        <div class="tab-pane fade" id="fd_closure" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
+                        <div class="tab-pane fade" id="min_cover" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+                        <div class="tab-pane fade" id="nav-nfs" role="tabpanel" aria-labelledby="nav-nfs-tab">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item" id="2NF">Second Normal Form</li>
+                                <li class="list-group-item" id="3NF">Third Normal Form</li>
+                                <li class="list-group-item" id="BCNF">Boyce Codd Normal Form</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
