--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                         </div>
                     </nav>
                     <div class="tab-content" id="nav-tabContent">
-                        <div class="tab-pane fade show active" id="attribute_closures" role="tabpanel" aria-labelledby="nav-home-tab">...</div>
-                        <div class="tab-pane fade" id="fd_closure" role="tabpanel" aria-labelledby="nav-profile-tab">...</div>
-                        <div class="tab-pane fade" id="min_cover" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
+                        <div class="tab-pane fade show active" id="attribute_closures" role="tabpanel" aria-labelledby="nav-home-tab"></div>
+                        <div class="tab-pane fade" id="fd_closure" role="tabpanel" aria-labelledby="nav-profile-tab"></div>
+                        <div class="tab-pane fade" id="min_cover" role="tabpanel" aria-labelledby="nav-contact-tab"></div>
                         <div class="tab-pane fade" id="nav-nfs" role="tabpanel" aria-labelledby="nav-nfs-tab">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item" id="2NF">Second Normal Form</li>
@@ -49,6 +49,9 @@
                 </div>
             </div>
     </div>
+    <footer class="blockquote-footer">
+        <p>Created by <a href="https://arjo129.wordpress.com/">arjo129</a>. Source code available on <a href="https://github.com/arjo129/functionalDependencyCalculator">github</a>. Found an error? Report an <a href="https://github.com/arjo129/functionalDependencyCalculator/issues">issue</a></p>.
+    </footer>
 
 </div>
 </body>
